<resources>
    <string name="app_name">HawkeRise</string>
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_home_fragment">Hello home fragment</string>-->
<!--    <string name="hello_hawker_fragment">Hello hawker fragment</string>-->
<!--    <string name="hello_search_fragment">Hello search fragment</string>-->
<!--    <string name="hello_favourites_fragment">Hello favourites fragment</string>-->
<!--    <string name="hello_account_fragment">Hello account fragment</string>-->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string name="stalls"> stalls</string>
    <string name="FindHCWithin">Find Hawker Centres within: </string>
    <string name="listHC">List of Hawker Centres: </string>
    <string name="AllHC">All</string>
    <string name="lessThan1km"> &lt;1km </string>
    <string name="lessThan3km"> &lt;3km </string>
    <string name="lessThan5km"> &lt;5km </string>
    <string name="NumStalls1">Here are the&#160;</string>
    <string name="NumStalls2">&#160;stalls in&#160;</string>
    <string name="NumStalls3"> : </string>

    <string name="Search"> Search </string>

    <string name="Unit_Number">Unit Number:&#160;</string>
    <string name="Contact_Number">Contact Number:&#160;</string>

    <string name="menuItemName">Menu Item Name</string>
    <string name="menuItemDesc">Description: %1$s</string>
    <string name="menuItemPrice">Price: $</string>
    <string name="menuItemStatus">Status: %1$s</string>
    <string name="hsName">Hawker Stall Name</string>

    <string name="welcome_guest">Hello Guest, here are the top rated stalls by our registered members:</string>
    <string name="welcome_user">&#160;, here are some stall recommendations that we have specially curated for you:</string>

</resources>