<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Hawkers_MenuFragment"
    android:orientation="horizontal"
    >


    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menuItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/menuItemName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/hsName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuItemName" />

    <ImageView
        android:id="@+id/menuItemImg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hsName" />

    <TextView
        android:id="@+id/menuItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:layout_marginTop="28dp"
        android:text="@string/menuItemPrice"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuItemImg" />

    <TextView
        android:id="@+id/menuItemStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/menuItemStatus"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuItemPrice" />

    <TextView
        android:id="@+id/menuItemDesc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/menuItemDesc"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuItemStatus" />


</androidx.constraintlayout.widget.ConstraintLayout>